tests/ui/invalid-module-declaration/invalid-module-declaration.rs
mod auxiliary {
    mod foo;
}

fn main() {}

//~? ERROR file not found for module `baz`
